Bug 185342 - text position isn't updated after deleting a shape
Summary: text position isn't updated after deleting a shape
Status: RESOLVED FIXED
Alias: None
Product: koffice
Classification: Applications
Component: flake (show other bugs)
Version: 1.9.8
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Zander
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-23 14:58 UTC by Elián Hanisch
Modified: 2009-10-29 22:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elián Hanisch 2009-02-23 14:58:09 UTC
Version:           2.0 beta-6 (using 4.1.2 (KDE 4.1.2), Kubuntu packages)
Compiler:          gcc
OS:                Linux (i686) release 2.6.24-23-generic

1. start a new document and paste some random paragraph on it.
2. add a shape and move it so the text moves around it
3. delete the shape

the text doesn't fill the gap left by the shape, you have to type something for force an update.
Comment 1 Thomas Zander 2009-03-08 23:54:44 UTC
The issue is that deleting a shape (removing it from the shapeManager) doesn't add the shape to the 'emit' list.
This is required for so when collision detection is turned on for any shape they get an update via the normal mechanisms.
Comment 2 Thomas Zander 2009-10-29 22:42:18 UTC
SVN commit 1042478 by zander:

On add/remove shape make sure we do collision detection

BUG:185342

 M  +3 -0      KoShapeManager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042478