On add/remove shape make sure we do collision detection

BUG:185342

svn path=/trunk/koffice/; revision=1042478